--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,10 @@
     "printWidth": 100,
     "trailingComma": "none",
     "tabWidth": 2,
-    "semi": false
+    "semi": false,
+    "arrowParens":"avoid",
+    "bracketSpacing": true,
+    "singleQuote": false,
+    "vueIndentScriptAndStyle": true,
+    "endOfLine": "lf"
 }
